@@ -7,7 +7,6 @@ import net.minecraft.core.BlockPos;
 import net.minecraft.core.Direction;
 import net.minecraft.world.level.block.state.BlockBehaviour;
 import net.minecraft.world.level.block.state.BlockState;
-import net.minecraft.world.level.levelgen.feature.Feature;
 import net.minecraft.world.level.levelgen.feature.treedecorators.TreeDecorator;
 import net.minecraft.world.level.levelgen.feature.treedecorators.TreeDecoratorType;
 import org.jetbrains.annotations.NotNull;
@@ -19,7 +18,7 @@ import java.util.function.Supplier;
 
 public class FallenLeavesDecorator extends TreeDecorator {
 
-    public static final MapCodec<FallenLeavesDecorator> CODEC = RecordCodecBuilder.mapCodec(instance -> instance.group(
+    public static final Codec<FallenLeavesDecorator> CODEC = RecordCodecBuilder.create(instance -> instance.group(
         BlockState.CODEC.fieldOf("state").forGetter((it) -> it.state)).apply(instance, FallenLeavesDecorator::new));
     private BlockState state = null;
     private Supplier<BlockState> lazyState = null;
@@ -42,7 +41,7 @@ public class FallenLeavesDecorator extends TreeDecorator {
         state = lazyState != null ? lazyState.get() : state;
         if (!context.leaves().isEmpty() && context.random().nextFloat() <= VerdureConfig.FALLEN_LEAVES_CHANCE.get()) {
             List<BlockPos> lowestLeafPositions = context.leaves().stream()
-                .filter(blockPos -> blockPos.getY() == context.leaves().getFirst().getY()).toList();
+                .filter(blockPos -> blockPos.getY() == context.leaves().get(0).getY()).toList();
             for (BlockPos pos : lowestLeafPositions) {
                 var mutable = new BlockPos.MutableBlockPos();
                 mutable.set(pos.below());
